2012-11-29  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New R7RS bytevector functions
	byteector-copy! and vector-append.

	* standard/Scheme.java (initScheme): New R7RS vector functions
	vector-copy and vector-copy!.

2012-11-28  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New R7RS port functions
	open-binary-input-file, call-with-port, textual-port?, binary-port?,
	port?, input-port-open?, output-port-open?, open-input-bytevector,
	and close-port.

2012-11-27  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New R7RS input functions
	eof-object, read-string, read-u8, peek-u8, u8-ready, read-bytevector,
	and read-bytevector!.
	* standard/readchar.java (readByte): New static method.
	(readChar): Use readByte.
	* repl.java: Update InPort.openFile call.

2012-11-22  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add R7RS output functions
	open-binary-output-file, write-string, write-u8, write-bytevector,
	open-output-bytevector, get-output-bytevector, and flush-output-port.

2012-11-20  Per Bothner  <per@bothner.com>

	* standard/Scheme.scm (initScheme): Add vector->string
	and string->vector.

	* standard/Scheme.scm: Update classname for bytevector functions.

2012-11-06  Per Bothner  <per@bothner.com>

	* lang/Translator.java (finishModule): If SUPERTYPE_SPECIFIED then
	we should reset USE_DEFINED_CLASS.
	* repl.java (compileFile): Remove now-redundant ModuleExp#classFor call.

2012-11-03  Charles Turner  <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	* standard/expt.java (expt): Fixes an unchecked cast to type
	Numeric causing unwanted exceptions.

2012-11-02  Per Bothner  <per@bothner.com>

	* standard/module_export.scm:  Defer resolving the type name.
	(scanForm): New method.
	* standard/module_implements: Similar.
	* lang/Translator.java (exp2Type): Don't use InlineCalls at this stage.

2012-10-21  Per Bothner  <per@bothner.com>
